--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-prod": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf build && cd frontend && npm install && npm run build && cp -r build ..",
+    "start-prod": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint ."
   },
   "repository": {
@@ -26,11 +27,17 @@
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
+    "cross-env": "^7.0.3",
     "cypress": "^12.12.0",
     "eslint": "^8.36.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js" 
   }
 }
