--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3001 --watch db.json",
+    "move:win": "node -e \"if (process.platform === 'win32') process.exit(1)\" || robocopy ./build ../build /e /move",
+    "move:lin": "node -e \"if (process.platform !== 'win32') process.exit(1)\" || cp -r ./build .."
   },
   "eslintConfig": {
     "extends": [
