--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,5 +17,7 @@ jobs:
           node-version: '16'
       - name: Install dependencies
         run: npm install
+      - name: Build
+        run: npm run build:ui
       - name: Check style
         run: npm run lint
