added backend tests to pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,5 @@ jobs:
         run: npm run build:ui
       - name: Check style
         run: npm run lint
+      - name: Run Backend tests
+        run: npm run test
