--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start-prod": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test:api": "jest --verbose --runInBand"
   },
   "repository": {
     "type": "git",
