added envs to e2e test

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,4 +34,6 @@ jobs:
           command: npm run test:e2e
           start: npm run start:prod
           wait-on: http://localhost:5000
-          headless: true
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          PORT: 3002
