--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,11 +30,8 @@ jobs:
       - name: E2E tests
         id: cypress
         uses: cypress-io/github-action@v5
-        env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          PORT: 3002
         with:
           command: npm run test:e2e
-          start: npm run start:prod
-          wait-on: http://localhost:5000
+          start: cross-env NODE_ENV=production PORT=3002 MONGODB_URI=${{ secrets.MONGODB_URI }} node index.js
+          wait-on: http://localhost:3002
         
