changed the waiting endpoint completely

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,5 +36,5 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start:prod
-          wait-on: http://localhost:3002/
+          wait-on: http://localhost:3002/info
         
