--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:ui": "npm run clean:win && npm run clean:lin && cd frontend && npm install && npm run build && npm run move:win && npm run move:win",
+    "build:ui": "npm run clean:win && npm run clean:lin && cd frontend && npm install && npm run build && npm run move:win && npm run move:lin",
     "clean:win": "node -e \"if (process.platform === 'win32') process.exit(1)\" || , if exist build rmdir /Q /S build",
     "clean:lin": "node -e \"if (process.platform !== 'win32') process.exit(1)\" || rm -rf build",
     "start:prod": "cross-env NODE_ENV=production node index.js",
