changed the cypress wait on react app

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start:prod
-          wait-on: http://localhost:3002/info
+          wait-on: http://localhost:3002
       - name: Deploy to Render
         id: deploy
         if: |
