--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint .",
     "test:api": "jest --verbose --runInBand",
-    "test:e2e": "cypress run ./cypress/e2e",
+    "test:e2e": "cypress run --spec 'cypress/e2e/puhelinluettelo.cy.js'",
+    "test:ui": "cypress run --spec 'cypress/e2e/frontend.cy.js'",
     "cypress:open": "cypress open"
   },
   "repository": {
