--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
           NODE_ENV: test
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
       - name: Run Frontend tests
-        id: cypress
+        id: frontend
         uses: cypress-io/github-action@v5
         env:
           PORT: 3002
@@ -38,7 +38,7 @@ jobs:
           start: npm run start:test
           wait-on: http://localhost:3002
       - name: E2E tests
-        id: cypress
+        id: e2e
         uses: cypress-io/github-action@v5
         env:
           PORT: 3002
