fixed tests to use right scripts and variables

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,9 +32,9 @@ jobs:
         uses: cypress-io/github-action@v5
         env:
           PORT: 3002
-          MONGODB_URI: ${{secrets.MONGODB_URI}}
+          TEST_MONGODB_URI: ${{secrets.TEST_MONGODB_URI}}
         with:
-          command: npm run test:e2e
+          command: npm run test:ui
           start: npm run start:test
           wait-on: http://localhost:3002
       - name: E2E tests
